[package]
name = "tart"
version = "0.0.1"
edition = "2024"
authors = ["Daniel Cui <solunian@gmail.com>"]
description = "tart: a command-line project manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
